Display incorrect answers correctly (sic!).

BUG:122111

svn path=/branches/KDE/3.5/kdeedu/kwordquiz/; revision=510376