src/qaview.cpp
@@ -41,7 +41,7 @@ QString highlightError(const QString & c, const QString & e)
   QString result2 = "</qt>";
   int j = s.length() - 1;
   int k = e.length() - 1;
-  while (s[j] == e[k])
+  while (s[j] == e[k] && k > i)
   {
     result2.prepend(e[k]);
     j--;
